[gd_scene load_steps=11 format=2]

[ext_resource path="res://World/Menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Fonts/Bit.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Theme/Main.tres" type="Theme" id=3]

[sub_resource type="Theme" id=11]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform float ca_strength = 20.0;

void fragment() {
	vec2 ca_offset = vec2(ca_strength, 0.0) * SCREEN_PIXEL_SIZE;
	
	float red = texture(SCREEN_TEXTURE, SCREEN_UV - ca_offset).r;
	float green = texture(SCREEN_TEXTURE, SCREEN_UV).g;
	float blue = texture(SCREEN_TEXTURE, SCREEN_UV + ca_offset).b;
	
	COLOR = vec4(red, green, blue, 1.0);
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/ca_strength = 0.0

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 5 )
shader_param/ca_strength = 10.0

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 5 )
shader_param/ca_strength = 15.0

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 5 )
shader_param/ca_strength = 0.0

[sub_resource type="Animation" id=10]
resource_name = "Glitch"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Glitch:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BlackBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 150.0
margin_right = 512.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 2 )
text = "Untitled Ghost Game"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.5
margin_top = -50.0
margin_right = 374.5
margin_bottom = 258.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 3 )
custom_constants/separation = 40
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( -451, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Start Game"

[node name="ShopButton" type="Button" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 500.0
margin_bottom = 184.0
rect_pivot_offset = Vector2( -451, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Equipment Shop"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 224.0
margin_right = 500.0
margin_bottom = 296.0
rect_pivot_offset = Vector2( -451, 0 )
theme = SubResource( 11 )
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "Options"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 336.0
margin_right = 500.0
margin_bottom = 408.0
rect_pivot_offset = Vector2( -451, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Exit Game"

[node name="Glitch" type="ColorRect" parent="."]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Glitch"
anims/Glitch = SubResource( 10 )

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
